# FinsCommand

./: README.md  finsudp.py  pyproject.toml
examples/: sample.py
src/finscommand/: __init__.py  client.py  errors.py
tests/: basic.py  test.py
